R4 classes use APIs newer than Android minSdk
Replace java.nio file APIs, String.isBlank, Stream.toList, List.copyOf, and Map.copyOf on the robot path with File, trim checks, collectors, and explicit immutable copies. Keep the same JSON and record behavior while remaining compatible with minSdk 24.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>\nClaude-Session: https://claude.ai/code/session_01SdkrbNwP3QT1rYDjT5r478